[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lsp-devtools"
version = "0.1.1"
description = "Developer tooling for language servers"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Alex Carney", email = "alcarneyme@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "appdirs",
    "aiosqlite",
    "importlib-resources; python_version<\"3.9\"",
    "pygls",
    "stamina",
    "textual>=0.38.0",
    "typing-extensions; python_version<\"3.8\"",
]

[project.urls]
"Bug Tracker" = "https://github.com/swyddfa/lsp-devtools/issues"
"Documentation" = "https://swyddfa.github.io/lsp-devtools/"
"Source Code" = "https://github.com/swyddfa/lsp-devtools"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pre-commit",
    "tox",
]
typecheck=[
    "mypy",
    "importlib_resources",
    "types-appdirs",
    "types-setuptools",
]
prometheus = ["prometheus_client"]

[project.scripts]
lsp-devtools = "lsp_devtools.cli:main"

[tool.setuptools.packages.find]
include = ["lsp_devtools*"]

[tool.coverage.run]
source_pkgs = ["lsp_devtools"]

[tool.coverage.report]
show_missing = true
skip_covered = true
sort = "Cover"

[tool.isort]
force_single_line = true
profile = "black"

[tool.towncrier]
filename = "CHANGES.rst"
directory = "changes/"
title_format = "v{version} - {project_date}"
issue_format = "`#{issue} <https://github.com/swyddfa/lsp-devtools/issues/{issue}>`_"
underlines = ["-", "^", "\""]

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "fix"
name = "Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Docs"
showcontent = true

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = true
