[build-system]
requires = ["hatchling>=1.17.1"]
build-backend = "hatchling.build"

[project]
name = "lsp-devtools"
dynamic = ["version"]
description = "Developer tooling for language servers"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Alex Carney", email = "alcarneyme@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiosqlite",
    "importlib-resources; python_version<\"3.9\"",
    "platformdirs",
    "pygls>=1.1.0",
    "stamina",
    "textual>=0.41.0",
    "typing-extensions; python_version<\"3.8\"",
]

[project.urls]
"Bug Tracker" = "https://github.com/swyddfa/lsp-devtools/issues"
"Documentation" = "https://swyddfa.github.io/lsp-devtools/"
"Source Code" = "https://github.com/swyddfa/lsp-devtools"

[project.scripts]
lsp-devtools = "lsp_devtools.cli:main"

[tool.coverage.run]
source_pkgs = ["lsp_devtools"]

[tool.coverage.report]
show_missing = true
skip_covered = true
sort = "Cover"

[tool.isort]
force_single_line = true
profile = "black"

[tool.towncrier]
filename = "CHANGES.md"
directory = "changes/"
title_format = "## v{version} - {project_date}"
issue_format = "[#{issue}](https://github.com/swyddfa/lsp-devtools/issues/{issue})"
underlines = ["", "", ""]

type = [
  { name = "Features", directory = "feature", showcontent = true },
  { name = "Enhancements", directory = "enhancement", showcontent = true },
  { name = "Fixes", directory = "fix", showcontent = true },
  { name = "Docs", directory = "doc", showcontent = true },
  { name = "Breaking Changes", directory = "breaking", showcontent = true },
  { name = "Deprecated", directory = "deprecated", showcontent = true },
  { name = "Misc", directory = "misc", showcontent = true },
]
