[metadata]
name = lsp-devtools
version = 0.0.1
description = Developer tooling for language servers/clients
long_description = file:README.md
long_description_content_type = text/markdown
author = Alex Carney
author_email = alcarneyme@gmail.com
url = https://alcarney.github.io/lsp-devtools
project_urls =
    Bug Tracker = https://github.com/alcarney/lsp-devtools/issues
    Documentation = https://alcarney.github.io/lsp-devtools/
    Source Code = https://github.com/alcarney/lsp-devtools
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
platforms = any

[options]
packages = find:
include_package_data = True
install_requires =
    appdirs
    pygls>=0.11.0,<0.12.0

[options.extras_require]
dev = black ; mypy ; flake8 ; pre-commit ; pytest-cov ; pytest-timeout ; tox ; types-appdirs; types-setuptools
prometheus = prometheus_client

[options.entry_points]
console_scripts =
    lsp-devtools = lsp_devtools.cli:main

[options.packages.find]
exclude = tests*

[flake8]
max-line-length = 88
