[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-lsp"
version = "0.3.0"
description = "pytest plugin for end-to-end testing of language servers"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Alex Carney", email = "alcarneyme@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Framework :: Pytest",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "importlib-resources; python_version<\"3.9\"",
    "pygls>=1.0.0",
    "pytest",
    "pytest-asyncio",
]

[project.urls]
"Bug Tracker" = "https://github.com/swyddfa/lsp-devtools/issues"
"Documentation" = "https://swyddfa.github.io/lsp-devtools/"
"Source Code" = "https://github.com/swyddfa/lsp-devtools"

[project.entry-points.pytest11]
pytest-lsp = "pytest_lsp"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pre-commit",
    "tox",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
]
typecheck = [
    "mypy",
    "types-appdirs"
]

[tool.setuptools.packages.find]
include = ["pytest_lsp*"]

[tool.isort]
force_single_line = true
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.towncrier]
filename = "CHANGES.rst"
directory = "changes/"
title_format = "v{version} - {project_date}"
issue_format = "`#{issue} <https://github.com/swyddfa/lsp-devtools/issues/{issue}>`_"
underlines = ["-", "^", "\""]

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "enhancement"
name = "Enhancements"
showcontent = true

[[tool.towncrier.type]]
directory = "fix"
name = "Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Docs"
showcontent = true

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true


[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
skip_missing_interpreters = true
envlist = py{37,38,39,310,311}

[testenv]
extras= dev
commands =
    pytest {posargs}
"""
