[build-system]
requires = ["hatchling>=1.17.1"]
build-backend = "hatchling.build"

[project]
name = "pytest-lsp"
dynamic = ["version"]
description = "A pytest plugin for end-to-end testing of language servers"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Alex Carney", email = "alcarneyme@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Framework :: Pytest",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "importlib-resources; python_version<\"3.9\"",
    "packaging",
    "pygls>=1.1.0",
    "pytest",
    "pytest-asyncio>=0.23",
]

[project.urls]
"Bug Tracker" = "https://github.com/swyddfa/lsp-devtools/issues"
"Documentation" = "https://lsp-devtools.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/swyddfa/lsp-devtools"

[project.entry-points.pytest11]
pytest-lsp = "pytest_lsp"

[tool.coverage.run]
source_pkgs = ["pytest_lsp"]

[tool.coverage.report]
show_missing = true
skip_covered = true
sort = "Cover"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.towncrier]
filename = "CHANGES.md"
directory = "changes/"
title_format = "## v{version} - {project_date}"
issue_format = "[#{issue}](https://github.com/swyddfa/lsp-devtools/issues/{issue})"
underlines = ["", "", ""]

type = [
  { name = "Features", directory = "feature", showcontent = true },
  { name = "Enhancements", directory = "enhancement", showcontent = true },
  { name = "Client Capabilities", directory = "capability", showcontent = true },
  { name = "Fixes", directory = "fix", showcontent = true },
  { name = "Docs", directory = "doc", showcontent = true },
  { name = "Breaking Changes", directory = "breaking", showcontent = true },
  { name = "Deprecated", directory = "deprecated", showcontent = true },
  { name = "Misc", directory = "misc", showcontent = true },
  { name = "Removed", directory = "removed", showcontent = true },
]
