[metadata]
name = pytest-lsp
version = 0.2.1
description = Pytest plugin for end-to-end testing of language servers
long_description = file:README.md
long_description_content_type = text/markdown
author = Alex Carney
author_email = alcarneyme@gmail.com
url = https://alcarney.github.io/lsp-devtools
project_urls =
    Bug Tracker = https://github.com/alcarney/lsp-devtools/issues
    Source Code = https://github.com/alcarney/lsp-devtools
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Framework :: Pytest
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
platforms = any

[options]
packages = find:
include_package_data = True
python_requires= >=3.7
install_requires =
    appdirs
    importlib-resources; python_version<"3.9"
    pygls>=1.0.0
    pytest
    pytest-asyncio

[options.extras_require]
dev = black ; mypy ; flake8 ; pre-commit ; pytest-cov ; pytest-timeout ; tox ; types-appdirs

[options.entry_points]
pytest11 =
    pytest-lsp = pytest_lsp

[options.packages.find]
exclude = tests*

[flake8]
max-line-length = 88
